2011-05-11 John Wu <John dot Wu at ACM dot org>
	* src/utilidor.cpp: remove calls to nosharing from sortAll and
	sortKeys.  These functions use shallow copying extensively to make
	sure they are working on the same data.
	* src/Makefile.am: remove -i option from sed command because -i is
	not standardized

2011-05-10 John Wu <John dot Wu at ACM dot org>
	* src/array_t.cpp:156 m_end was set incorrectly, which causes the
	sort functions to behave incorrectly (a problem first reported by
	Alexandre Maurel)

2011-05-07 John Wu <John dot Wu at ACM dot org>
	* configure.ac, src/Makefile.am: replace AC_CONFIG_COMMANDS for
	modifying PACKAGE_ prefix with a rule in src/Makefile.am

2011-05-06 John Wu <John dot Wu at ACM dot org>
	* configure.ac: quite_NaN should be quiet_NaN

2011-05-05 John Wu <John dot Wu at ACM dot org>
	* src/capi.cpp: add support for categorical values through
	function fastbit_add_values (the patch from Mario D. Santana only
	dealt with text type not category type)
	* tests/Makefile.am: add tests to prevent test data to be
	generated multiple times
	* util.h: add macros FASTBIT_FLOAT_NULL and FASTBIT_DOUBLE_NULL to
	denote the null values used for float and double.  this is an
	attempt to get around the problem with STLPORT having an incorrect
	value for quiet_NaN (a problem reported by Alexandre Maurel)
	* configure.ac: add option --disable-quiet-nan to avoid using
	quiet nan as null values

2011-05-04 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: remove idcol from index::create
	* src/ikeywords.h, src/ikeywords.cpp: refactor the default
	constructor of ibis::keywords to make more consistent use of the
	internal parser (to address a problem reported by Gunter Hick
	<hick at scigames.at>)
	* src/category.h, src/category.cpp: add functions
	text::TDListForKeywordIndex and delimitersForKeywordIndex
	* configure.ac: add option --enable-static-pic to add options
	"-static -fPIC".  These flags are needed for compute node linux
