@@ -11,7 +11,7 @@
 /// Provide a dual-directional mapping between strings and integers.  A
 /// utility class used by ibis::category.  The NULL string is always the
 /// 0th string.
-class ibis::dictionary {
+class FASTBIT_CXX_DLLSPEC ibis::dictionary {
 public:
     ~dictionary() {clear();}
     dictionary(const dictionary& dic);
